kubernetes/inactive/grocy/grocy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: grocy # {"$kpt-set":"namespace"}
  annotations:
    metallb.universe.tf/allow-shared-ip: grocy
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.209
  ports:
  - name: http
    port: 80
    targetPort: 80 # {"$kpt-set":"http-port"}
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443 
    protocol: TCP
  - name: other
    port: 9000
    targetPort: 9000 
    protocol: TCP
  selector:
    app: grocy
