kubernetes/inactive/grocy/grocy-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grocy-ingress
  namespace: grocy
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - grocy.lester.network
    secretName: grocy-tls
  rules:
  - host: grocy.lester.network
    http:
      paths:
      - path: /
        backend:
          serviceName: grocy
          servicePort: 80
